Changes the heading drop down to a custom HTML rendered version. This seems to make IE 6 very unhappy in RTL mode - and barring making the menu a fixed width like we did in the Vector skin, there doesn't seem to be a way to get the menu to align properly. Also in IE6, the clicking on the menu to show the popup seems to make IE forget the text position and all inserts are made at the begining... AKA - IE6 is wasting our development time.
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/trunk/extensions/UsabilityInitiative@55247 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/css/wikiEditor.css
+++ b/css/wikiEditor.css
@@ -16,10 +16,6 @@ form#editform {
 	width: 100%;
 	margin: -1px;
 }
-/* This class is used by jQuery UI*/
-.ui-widget {
-	font-size: 13px !important;
-}
 .wikiEditor-ui .wikiEditor-ui-text > textarea#wpTextbox1 {
 	margin: 0;
 }
@@ -35,7 +31,6 @@ body.rtl .wikiEditor-ui {
 	float: right;
 }
 .wikiEditor-ui .wikiEditor-ui-bottom {
-	position: relative;
 	border: solid silver 1px;
 	border-top-width: 0;
 	width: 100%;
